--- a/e-basa/src/index.css
+++ b/e-basa/src/index.css
@@ -513,3 +513,17 @@ footer {
   width: 400px;
 }
 
+.logout-button{
+  border-radius: 30px;
+  width: 150px;
+  height: 60px;
+  margin-top: 20px;
+  margin-left: 590px;
+  margin-bottom: 30px;
+  background-color: #1251d8;
+  display: flex; /* Make the container a flex container */
+  justify-content: center; /* Center the content horizontally */
+  align-items: center; /* Center the content vertically */
+  text-decoration: none; /* Remove default link styling */
+  color: white; /* Set the text color to white */
+}
