--- a/e-basa/src/pages/reg.css
+++ b/e-basa/src/pages/reg.css
@@ -1,20 +1,11 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <link href="https://fonts.cdnfonts.com/css/happy-school" rel="stylesheet">
-
-<style>
-body {
-  margin: 0;
-  padding: 0;
-  height: 360px;
-  background-image: url('G:/Project/React/e-basa/public/assets/imgs/loginbg.png');
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  font-family: 'Happy School', sans-serif;
-}
-
+.loginbg {
+    top: 50;
+    height: 100vh;
+    background-image: url('G:/Project/React/e-basa/public/assets/imgs/loginbg.png');
+    background-position: center center;
+    background-size: 'contain';
+  }
+  
 .centered-image {
     position: absolute;
     top: 0;
@@ -56,7 +47,7 @@ button {
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25) inset, 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
 
-input[type="text"] {
+input {
     width: calc(100% - 20px);
     height: 50px;
     padding: 10px;
@@ -88,51 +79,28 @@ input[type="text"] {
 
 }
 
-.left-container,
-    .right-container {
+
+.reg-container {
+    width: 1250px;
+    height: 400px;
+    display: flex;
+    background: rgba(255, 255, 255, 0.5);
+    border-radius: 25px;
+  
+  }
+  
+  .Lcontainer,
+    .Rcontainer {
       padding: 20px;
     box-sizing: border-box;
     }
-
-.left-container {
-  flex: 0 0 60%;
-
-}
-
-.right-container {
-  flex: 0 0 40%;
-
-}
-
-
   
-</style>
-</head>
-<body>
-  <div class="clouds">
-    <img src="G:/Project/React/e-basa/public/assets/imgs/clouds1.png" class="clouds-img">
-  </div>
-
-<img src="G:/Project/React/e-basa/public/assets/imgs/nav-logo.png" alt="Centered Image" class="centered-image">
-
-<div class="container">
-
-  <div class="reg-container">
-
-    <div class="left-container"> 
-    <input type="text" placeholder="Username" name="username" required>
-    <input type="text" placeholder="Username" name="username" required>
-    <input type="text" placeholder="Username" name="username" required>  
-  </div>
-
-    <div class="right-container">
-    <input type="text" placeholder="Username" name="username" required>
-    <input type="text" placeholder="Username" name="username" required>
-    <input type="text" placeholder="Username" name="username" required>  
-  </div>
-
-  </div>
-
-</div>
-</body>
-</html>
+  .Lcontainer {
+  flex: 0 0 60%;
+  
+  }
+  
+  .Rcontainer {
+  flex: 0 0 40%;
+  
+  }
