--- a/e-basa/src/index.css
+++ b/e-basa/src/index.css
@@ -527,3 +527,61 @@ footer {
   text-decoration: none; /* Remove default link styling */
   color: white; /* Set the text color to white */
 }
+
+
+#menubt-image,
+#homebt-image,
+#soundbt-image,
+#settingbt-image {
+  width: 75px; /* Adjust image size as needed */
+  height: 75px; /* Adjust image size as needed */
+}
+
+#home-image:hover {
+  content: url('/public/assets/imgs/ingame/homehv.png');
+}
+
+#music-image:hover {
+  content: url('/public/assets/imgs/ingame/musichv.png');
+}
+
+#settings-image:hover {
+  content: url('/public/assets/imgs/ingame/settingshv.png');
+}
+
+#menu-image:hover {
+  content: url('/public/assets/imgs/ingame/menuhv.png');
+}
+
+#prev-image:hover {
+  content: url('/public/assets/imgs/ingame/prevhv.png');
+}
+
+#pause-image:hover {
+  content: url('/public/assets/imgs/ingame/pausehv.png');
+}
+
+#next-image:hover {
+  content: url('/public/assets/imgs/ingame/nexthv.png');
+}
+
+.botnav {
+  position: fixed;
+  bottom: 0;
+  left: 50%; /* Position it at the horizontal center */
+  transform: translateX(-50%); /* Center it horizontally */
+  width: 90%; /* Adjust the width as needed */
+  background: rgba(255, 255, 255, 0.5); /* 50% transparent white background */
+  overflow-x: hidden;
+  margin-bottom: 10px;
+  z-index: 1;
+  display: flex;
+  justify-content: space-around; /* To evenly space navigation items */
+  border-radius: 35px;
+  box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
+}
+
+.botnav-bt {
+  display: block;
+  margin: 10px 0;
+}
