--- a/e-basa/src/index.css
+++ b/e-basa/src/index.css
@@ -2,11 +2,13 @@ body {
   margin: 0;
   padding: 0;
   background-image: url('/public/assets/imgs/Landingbk.png');
-  background-size: cover;
-  background-repeat: no-repeat; 
+  height: 100vh; /* Setting height to viewport height */
+  background-repeat: no-repeat;
+  background-size: cover; /* Covering the entire viewport */
   font-family: 'Happy School', sans-serif;
   overflow-x: hidden;
 }
+
 
 footer {
   margin: 0;
@@ -36,6 +38,7 @@ footer {
         .topnav {
   overflow: hidden;
   position: fixed;
+
   
 }
 
@@ -81,14 +84,6 @@ footer {
   content: url('/public/assets/imgs/trophy-hover.png');
 }
 
-#puntos-image:hover {
-  content: url('/public/assets/imgs/puntos-hover.png');
-}
-
-#kwento-image:hover {
-  content: url('/public/assets/imgs/kwento-hover.png');
-}
-
 #menubt-image:hover {
   content: url('/public/assets/imgs/menuhv.png');
 }
@@ -114,119 +109,6 @@ footer {
   flex-wrap: wrap;
   padding-top: 100px;
   /* margin-bottom:70px; */ 
-}
-
-.letra-button {
-  background-color: #FFD440;
-  border-radius: 25px;
-  color: #fff;
-  width: 230px;
-  height: 50px;
-  text-decoration: none;
-  text-align: center; /* Center the text */
-  line-height: 50px;
-  display: inline-block;
-}
-
-.letra-button:hover {
-  background-color: #FFDD69;
-}
-
-.numero-button {
-  background-color: #756AAF;
-  border-radius: 25px;
-  color: #fff;
-  width: 230px;
-  height: 50px;
-  text-decoration: none;
-  display: inline-block;
-  text-align: center; /* Center the text */
-  line-height: 50px;
-}
-
-.numero-button:hover {
-  background-color: #5E45DF;
-}
-
-.hayop-button {
-  background-color: #FF7A69;
-  border-radius: 25px;
-  color: #fff;
-  width: 230px;
-  height: 50px;
-  text-decoration: none;
-  text-align: center; /* Center the text */
-  line-height: 50px;
-  display: inline-block;
-}
-
-.hayop-button:hover {
-  background-color: #FB6C59;
-}
-
-.palaka-button {
-  background-color: #A1E67D;
-  border-radius: 25px;
-  color: #fff;
-  width: 230px;
-  height: 50px;
-  text-decoration: none;
-  text-align: center; /* Center the text */
-  line-height: 50px;
-  display: inline-block; 
-  margin-left: 100px;
-}
-
-.palaka-button:hover {
-  background-color: #87FF49;
-}
-
-.langgam-button {
-  background-color: #FB6C59;
-  border-radius: 25px;
-  color: #fff;
-  width: 230px;
-  height: 50px;
-  text-decoration: none;
-  text-align: center; /* Center the text */
-  line-height: 50px;
-  display: inline-block; 
-  margin-left: 100px;
-}
-
-.langgam-button:hover {
-  background-color: #FF3E3E;
-}
-
-.daga-button {
-  background-color: #FAC40E;
-  border-radius: 25px;
-  color: #fff;
-  width: 230px;
-  height: 50px;
-  text-decoration: none;
-  text-align: center; /* Center the text */
-  line-height: 50px;
-  display: inline-block; 
-  margin-left: 100px;
-}
-
-.daga-button:hover {
-  background-color: #ECB600;
-}
-
-.box1 {
-  width: 400px;
-  height:350px;
-  margin: -20px;
-  border: none;
-  text-align: center;
-}
-
-.box1 img {
-  padding-top:50px;
-  width: 30px;
-  height: auto;
 }
 
 .sidenav {
@@ -267,72 +149,6 @@ footer {
   color: #007bff; /* Change color on hover */
 }
 
-.container-palaka {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            border-radius: 50px;
-            background-color: white;
-            width: 1004px;
-            height: 250px;
-            margin: 0 auto; /* Center horizontally within the body */
-        }
-
-        .palaka {
-            flex: 1;
-           padding-right: 20px;
-           padding-top: 3px;
-        }
-
-        .text-palaka {
-            flex: 2;
-            padding: 20px;
-        }
-
-        .container-langgam {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            border-radius: 50px;
-            background-color: white;
-            width: 1004px;
-            height: 250px;
-            margin: 0 auto; /* Center horizontally within the body */
-        }
-
-        .langgam {
-            flex: 1;
-           padding-left: 20px;
-           padding-top: 3px;
-        }
-
-        .text-langgam {
-            flex: 2;
-            padding: 20px;
-        }
-
-        .container-daga {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            border-radius: 50px;
-            background-color: white;
-            width: 1004px;
-            height: 250px;
-            margin: 0 auto; /* Center horizontally within the body */
-        }
-
-        .daga {
-            flex: 1;
-           padding-right: 20px;
-           padding-top: 3px;
-        }
-
-        .text-daga {
-            flex: 2;
-            padding: 20px;
-        }
-
         .about {
   color: #7FD8A5; /* Green color for "ABOUT" */
 }
@@ -369,7 +185,6 @@ footer {
   padding: 20px; /* Add padding for spacing */
   max-width: 1000px; /* Optional: Limit the maximum width of the container */
 }
-
 
 
 .left-container {
@@ -537,51 +352,47 @@ footer {
   height: 75px; /* Adjust image size as needed */
 }
 
-#home-image:hover {
-  content: url('/public/assets/imgs/ingame/homehv.png');
-}
-
-#music-image:hover {
-  content: url('/public/assets/imgs/ingame/musichv.png');
-}
-
-#settings-image:hover {
-  content: url('/public/assets/imgs/ingame/settingshv.png');
-}
-
-#menu-image:hover {
-  content: url('/public/assets/imgs/ingame/menuhv.png');
-}
-
 #prev-image:hover {
   content: url('/public/assets/imgs/ingame/prevhv.png');
 }
 
-#pause-image:hover {
-  content: url('/public/assets/imgs/ingame/pausehv.png');
-}
 
 #next-image:hover {
   content: url('/public/assets/imgs/ingame/nexthv.png');
 }
 
-.botnav {
-  position: fixed;
-  bottom: 0;
-  left: 50%; /* Position it at the horizontal center */
-  transform: translateX(-50%); /* Center it horizontally */
-  width: 90%; /* Adjust the width as needed */
-  background: rgba(255, 255, 255, 0.5); /* 50% transparent white background */
-  overflow-x: hidden;
-  margin-bottom: 10px;
-  z-index: 1;
-  display: flex;
-  justify-content: space-around; /* To evenly space navigation items */
-  border-radius: 35px;
-  box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
+#aralin-image:hover {
+  content: url('/public/assets/imgs/ingame/aralinhv.png');
 }
 
-.botnav-bt {
-  display: block;
-  margin: 10px 0;
+#pagsusulit-image:hover{
+  content: url('/public/assets/imgs/ingame/pagsusulithv.png');
+}
+
+
+.aralin, .pagsusulit {
+  width: 250px;
+  height: 350px;
+  margin: 20px;
+  /* Add any additional styling for the container */
+}
+
+.home-carousel {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* Add any additional styling for the container */
+  position: fixed;
+  top: 48%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.gamebt{
+  height: 40px;
+  width: 150px;
+   position: fixed;
+  top: 14%;
+  margin-left: 145px;
+  transform: translate(-50%, -50%);
 }
